tooltip position overlapping fixed

--- a/geomap.css
+++ b/geomap.css
@@ -37,6 +37,7 @@ body {
 
 #description {
     margin-left: 0;
+    padding-top: 10px;
     padding-right: 10px;
     height: 6em;
 }
@@ -48,7 +49,7 @@ body {
     text-align: justify;
 }
 
-span#units {
+span.units {
     text-align: center;
     color: lightsteelblue;
     font-weight: 600;
